# lambda

./: .gitignore  Makefile  lambda.opam
src/: churchMonotype.ml  churchMonotype.mli  dune  extList.ml  extList.mli  lambda.ml  lambda.mli  lexer.mll  main.ml  option.ml  option.mli  parser.mly  result.ml  result.mli  substitution.ml  substitution.mli  substitution_test.ml  term.ml  term.mli  treeof.ml  type.ml  type.mli  typingEnvironment.ml  typingEnvironment.mli  unification.ml  unification.mli  unification_test.ml  var.ml  var.mli  w.ml  w.mli
